# logz_check_script

./: pyproject.toml
logzcheck/: logzcheck.py
